<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_edit_product_details_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <TextView
        android:id="@+id/hintNoImagesFound"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:textColor="@color/colorWhite"
        android:text="@string/hint_no_images_fetched"
        android:textAlignment="center"
        android:textSize="14sp"
        android:background="@color/colorAccent"
        android:paddingBottom="6dp"
        android:paddingTop="6sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hintNoImagesFound">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            tools:context=".share.activities.EditProductDetailsActivity">


            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginEnd="@dimen/default_margin"
                android:fontFamily="@font/playfair_display"
                android:text="@string/title_edit_product_details"
                android:textAlignment="center"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/productImageView"
                android:layout_width="252dp"
                android:layout_height="187dp"
                android:layout_gravity="center"
                android:layout_marginStart="79dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="80dp"
                android:background="@drawable/rounded_corner"
                android:contentDescription="@string/product_image_content_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/productNameLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="@dimen/default_margin"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/roboto"
                android:text="@string/label_product_name"
                app:layout_constraintBottom_toTopOf="@+id/productName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/productImageView" />

            <EditText
                android:id="@+id/productName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="@dimen/default_margin"
                android:background="@drawable/rounded_corner_form_field"
                android:drawableEnd="@drawable/icon_clear_input"
                android:drawablePadding="16pt"
                android:ems="10"
                android:fontFamily="@font/roboto_medium"
                android:gravity="start|top"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:labelFor="@id/productName"
                android:paddingStart="20dp"
                android:paddingTop="16dp"
                android:paddingEnd="25dp"
                android:paddingBottom="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/productNameLabel" />

            <TextView
                android:id="@+id/productPriceLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="@dimen/default_margin"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/roboto"
                android:labelFor="@id/productPrice"
                android:text="@string/label_product_price"
                app:layout_constraintBottom_toTopOf="@+id/productPrice"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/productName" />

            <EditText
                android:id="@+id/productPrice"
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="@dimen/default_margin"
                android:layout_marginBottom="16dp"
                android:background="@drawable/rounded_corner_form_field"
                android:drawableEnd="@drawable/icon_clear_input"
                android:drawablePadding="16pt"
                android:ems="10"
                android:fontFamily="@font/roboto_medium"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:paddingStart="20dp"
                android:paddingEnd="25dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/productPriceLabel" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>



